--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "letswatch",
   "version": "1.0.0",
   "main": "electron/main.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/taalhaakaagaan/Lets-Watch.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm run dev --prefix client",
     "electron": "wait-on http://localhost:5173 && cross-env ELECTRON_START_URL=http://localhost:5173 electron .",
-    "dist": "npm run build --prefix client && electron-builder"
+    "dist": "npm run build --prefix client && electron-builder --win",
+    "dist:linux": "npm run build --prefix client && electron-builder --linux",
+    "dist:all": "npm run build --prefix client && electron-builder --win --linux"
   },
   "build": {
     "appId": "com.letswatch.app",
@@ -21,6 +27,13 @@
     },
     "win": {
       "target": "nsis"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Video"
     }
   },
   "keywords": [],
