fix: add author email for linux deb build

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     }
   },
   "keywords": [],
-  "author": "",
+  "author": "Talha Kağan Tosun <talhakaagantosun@gmail.com>",
   "license": "ISC",
   "description": "",
   "devDependencies": {
