--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0",
-    "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.3"
+    "peerjs": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
