--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release Build
+name: Build and Release
 
 on:
   push:
@@ -9,8 +9,9 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  build-and-release:
     runs-on: ${{ matrix.os }}
+    
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest]
@@ -23,16 +24,33 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
-      
-      - name: Install Dependencies
-        run: |
-          npm install
-          cd client
-          npm install
 
-      - name: Build Electron App
+      - name: Install Dependencies
+        run: npm ci
+
+      # Build for Windows
+      - name: Build Windows
+        if: matrix.os == 'windows-latest'
+        run: npm run dist:win
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          npm run dist:${{ matrix.os == 'ubuntu-latest' && 'linux' || 'win' }} -- -p always
+
+      # Build for Linux
+      - name: Build Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: npm run dist:linux
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Upload Artifacts to Release
+      - name: Upload Release Assets
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            dist/*.exe
+            dist/*.AppImage
+            dist/*.yml
+            dist/*.yaml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
