--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bad-words": "^4.0.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
